# join-to-it-interview

./: .flake8  .gitignore  README.md  pyproject.toml
src/: asgi.py  urls.py  wsgi.py
src/apps/events/: admin.py  exceptions.py  filters.py  models.py  permissions.py  serializers.py  services.py  urls.py  validators.py  views.py
src/apps/events/migrations/: 0001_initial.py  0002_initial.py
src/apps/users/: admin.py  managers.py  models.py  serializers.py  urls.py  views.py
src/apps/users/migrations/: 0001_initial.py
src/settings/: __init__.py  general.py  local.example.py
tests/: conftest.py
tests/factories/: events.py  users.py
tests/unit/events/: test_filters.py  test_models.py  test_views.py
tests/unit/users/: test_views.py
